@@ -3,8 +3,9 @@ package ru.nucodelabs.geo.ves.calc.inverse.func;
 import org.apache.commons.math3.analysis.MultivariateFunction;
 import ru.nucodelabs.geo.forward.ForwardSolver;
 import ru.nucodelabs.geo.target.RelativeErrorAwareTargetFunction;
-import ru.nucodelabs.geo.ves.ExperimentalData;
 import ru.nucodelabs.geo.ves.ModelLayer;
+import ru.nucodelabs.geo.ves.ReadOnlyExperimentalSignal;
+import ru.nucodelabs.geo.ves.ReadOnlyModelLayer;
 import ru.nucodelabs.geo.ves.calc.adapter.ForwardSolverAdapterKt;
 
 import java.util.ArrayList;
@@ -12,18 +13,18 @@ import java.util.List;
 
 public class FunctionValue implements MultivariateFunction {
     //Экспериментальные точки для FS
-    private final List<ExperimentalData> experimentalData;
+    private final List<ReadOnlyExperimentalSignal> experimentalData;
     //Функция для вычисления разности между exp и theoretical точками
     private final RelativeErrorAwareTargetFunction targetFunction;
     //Исходная модель
-    private final List<ModelLayer> modelLayers;
+    private final List<ReadOnlyModelLayer> modelLayers;
     private final ForwardSolver forwardSolver;
 
     private double diffMinValue = Double.MAX_VALUE;
 
-    public FunctionValue(List<ExperimentalData> experimentalData,
+    public FunctionValue(List<ReadOnlyExperimentalSignal> experimentalData,
                          RelativeErrorAwareTargetFunction targetFunction,
-                         List<ModelLayer> modelLayers,
+                         List<ReadOnlyModelLayer> modelLayers,
                          ForwardSolver forwardSolver) {
         this.experimentalData = experimentalData;
         this.targetFunction = targetFunction;
@@ -34,37 +35,37 @@ public class FunctionValue implements MultivariateFunction {
     @Override
     public double value(double[] variables) {
         //Изменяемые сопротивления и мощности
-        List<Double> currentModelResistance = new ArrayList<>();
+        List<Double> currentModelResistivity = new ArrayList<>();
         List<Double> currentModelPower = new ArrayList<>();
 
-        int unfixedResistancesCnt = (int) modelLayers.stream()
-                .filter(modelLayer -> !modelLayer.isFixedResistance()).count();
+        int unfixedResistivityCnt = (int) modelLayers.stream()
+            .filter(modelLayer -> !modelLayer.isFixedResistivity()).count();
 
         //Восстановление изменяемых слоев до нормальной формы
-        for (int i = 0; i < unfixedResistancesCnt; i++) {
-            currentModelResistance.add(Math.exp(variables[i]));
+        for (int i = 0; i < unfixedResistivityCnt; i++) {
+            currentModelResistivity.add(Math.exp(variables[i]));
         }
-        for (int i = unfixedResistancesCnt; i < variables.length; i++) {
+        for (int i = unfixedResistivityCnt; i < variables.length; i++) {
             currentModelPower.add(Math.exp(variables[i]));
         }
         currentModelPower.add(0.0);
 
         //Объединение изменяемых и неизменяемых слоев (в нормальной форме)
-        List<Double> newModelResistance = new ArrayList<>();
+        List<Double> newModelResistivity = new ArrayList<>();
         List<Double> newModelPower = new ArrayList<>();
 
-        int cntUnfixedResistances = 0;
-        for (ModelLayer modelLayer : modelLayers) {
-            if (modelLayer.isFixedResistance()) {
-                newModelResistance.add(modelLayer.getResistance());
+        int cntUnfixedResistivity = 0;
+        for (var modelLayer : modelLayers) {
+            if (modelLayer.isFixedResistivity()) {
+                newModelResistivity.add(modelLayer.getResistivity());
             } else {
-                newModelResistance.add(currentModelResistance.get(cntUnfixedResistances));
-                cntUnfixedResistances++;
+                newModelResistivity.add(currentModelResistivity.get(cntUnfixedResistivity));
+                cntUnfixedResistivity++;
             }
         }
 
         int cntUnfixedPowers = 0;
-        for (ModelLayer modelLayer : modelLayers) {
+        for (var modelLayer : modelLayers) {
             if (modelLayer.isFixedPower()) {
                 newModelPower.add(modelLayer.getPower());
             } else {
@@ -75,24 +76,24 @@ public class FunctionValue implements MultivariateFunction {
 
         List<ModelLayer> newModelLayers = new ArrayList<>();
         for (int i = 0; i < modelLayers.size(); i++) {
-            newModelLayers.add(new ModelLayer(newModelPower.get(i), newModelResistance.get(i), false, false));
+            newModelLayers.add(new ModelLayer(newModelPower.get(i), newModelResistivity.get(i), false, false));
         }
 
-        List<Double> solvedResistance = ForwardSolverAdapterKt.invoke(forwardSolver, experimentalData, newModelLayers);
+        List<Double> solvedResistivity = ForwardSolverAdapterKt.invoke(forwardSolver, experimentalData, newModelLayers);
 
         double diffValue = targetFunction.invoke(
-                solvedResistance,
-                experimentalData.stream().map(ExperimentalData::getResistanceApparent).toList(),
-                experimentalData.stream().map(ExperimentalData::getErrorResistanceApparent).toList()
+            solvedResistivity,
+            experimentalData.stream().map(ReadOnlyExperimentalSignal::getResistivityApparent).toList(),
+            experimentalData.stream().map(ReadOnlyExperimentalSignal::getErrorResistivityApparent).toList()
         );
 
         boolean flag = false;
 
         for (ModelLayer modelLayer : newModelLayers) {
-            if (modelLayer.getResistance() < 0.1 ||
-                    modelLayer.getResistance() > 1e5 ||
+            if (modelLayer.getResistivity() < 0.1 ||
+                modelLayer.getResistivity() > 1e5 ||
                     (modelLayer.getPower() != 0.0 && modelLayer.getPower() < 0.1) ||
-                    modelLayer.getPower() > experimentalData.get(experimentalData.size() - 1).getAb2()) {
+                modelLayer.getPower() > experimentalData.getLast().getAb2()) {
                 diffValue = Math.max(diffMinValue * (1.1 + 0.1 * Math.random()), diffValue);
                 flag = true;
                 break;
